--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
       <h2 class="ark" id="city">"State"</h2>
       <hr class="cityline" />
     </section>
+    <a href="https://github.com/sav482/new-github"
+      >Open-source code
+      <p>by: Savannah Mosher</p>
+    </a>
     <script src="way/java.js"></script>
   </body>
 </html>
