added css to link

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
       <h2 class="ark" id="city">"State"</h2>
       <hr class="cityline" />
     </section>
-    <a href="https://github.com/sav482/new-github"
-      >Open-source code
+    <div class="link">
+      <a href="https://github.com/sav482/new-github">Open-source code </a>
       <p>by: Savannah Mosher</p>
-    </a>
+    </div>
     <script src="way/java.js"></script>
   </body>
 </html>
