--- a/index.html
+++ b/index.html
@@ -63,9 +63,16 @@
           Current Location
         </button>
       </form>
-      <h1>🌁<span id="temp">82</span>°F</h1>
+      <div class="weatherEmoji">
+        <img
+          src="https//http://openweathermap.org/img/wn/10d@2x.png"
+          alt="clear"
+          id="src"
+        />
+      </div>
+      <h1><span id="temp">82</span>°F</h1>
 
-      <img src="image/img.png" alt="" />
+      <img src="image/img.png" alt="" width="500px" />
       <ul>
         <li>
           Wind <span id="wind">4</span>km/H
