added Celsius and Fahrenheit

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
           id="src"
         />
       </div>
-      <h1><span id="temp">82</span>°F</h1>
+      <h1><span id="temp">82</span></h1>
+      <a href="#" class="tempF" id="fahrenheit-link">°F </a
+      ><span class="line-FC">|</span>
+      <a href="#" class="tempC" id="celsius-link"> °C</a>
 
       <img src="image/img.png" alt="" width="500px" />
       <ul>
