changed forcast to "weather site"

--- a/index.html
+++ b/index.html
@@ -22,30 +22,9 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            Thurs 10:00 <br />
-            🌞
-          </div>
-          <div class="col">
-            Thurs 18:00 <br />
-            ⛅
-          </div>
-          <div class="col">
-            Fri 07:00 <br />
-            ☔
-          </div>
-          <div class="col">
-            Fri 17:00 <br />
-            ⚡
-          </div>
-          <div class="col">
-            Fri 20:00 <br />
-            ☁️
-          </div>
-        </div>
-      </div>
+      <h5 class="currentDate">
+        <span> Weather Site </span>
+      </h5>
     </header>
     <section>
       <hr class="daysline" />
@@ -98,7 +77,10 @@
     </section>
     <div class="link">
       <a href="https://github.com/sav482/new-github">Open-source code </a>
-      <p>by: Savannah Mosher</p>
+      <small>
+        <br />
+        by: Savannah Mosher</small
+      >
     </div>
     <script src="way/java.js"></script>
   </body>
